unpackaged/main/default/objects/Centro__Action__e/Centro__Action__e.object-meta.xml
<CustomObject>
    <description>Centro event generated by Button press in message or other Slack related event.</description>
    <label>Centro Action</label>
    <pluralLabel>Centro Actions</pluralLabel>
</CustomObject>