unpackaged/main/default/objects/Centro__Action__e/fields/Centro__Message_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Centro__Message_Attachments__c</fullName>
    <label>Message Attachments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>