unpackaged/main/default/objects/Centro__Action__e/fields/Centro__Message_Text__c.field-meta.xml
<CustomField>
    <fullName>Centro__Message_Text__c</fullName>
    <label>Message Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>