unpackaged/main/default/objects/Centro__Action__e/fields/Centro__Message_TS__c.field-meta.xml
<CustomField>
    <fullName>Centro__Message_TS__c</fullName>
    <label>Message Timestamp</label>
    <length>80</length>
    <type>Text</type>
</CustomField>