unpackaged/main/default/objects/Centro__Action__e/fields/Centro__Message_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Centro__Message_User_Email__c</fullName>
    <label>Message User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>