unpackaged/main/default/objects/Centro__Action__e/fields/Centro__Message_Username__c.field-meta.xml
<CustomField>
    <fullName>Centro__Message_Username__c</fullName>
    <label>Message Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>