unpackaged/main/default/objects/Centro__Action__e/fields/Centro__UserId__c.field-meta.xml
<CustomField>
    <fullName>Centro__UserId__c</fullName>
    <label>Slack Member Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>